--- a/app.ipynb
+++ b/app.ipynb
@@ -97,7 +97,10 @@
     "    return X.toarray()\n",
     "\n",
     "if __name__ == '__main__':\n",
-    "    app.run(debug=True)\n"
+    "    import os\n",
+    "    port = int(os.environ.get(\"PORT\", 5000))  # Get the port from the environment variable or use 5000 by default\n",
+    "    app.run(host='0.0.0.0', port=port)\n",
+    "\n"
    ]
   },
   {
