--- a/app.ipynb
+++ b/app.ipynb
@@ -36,19 +36,18 @@
     "import numpy as np\n",
     "from flask import Flask, request, render_template\n",
     "import joblib\n",
-    "import pickle\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "\n",
+    "import joblib\n",
     "\n",
     "# Load the model\n",
     "model = joblib.load(\"best_model_svc.pkl\")\n",
     "\n",
     "# Load the multilabel binarizer\n",
-    "with open(\"binarizer.pkl\", \"rb\") as file:\n",
-    "    multilabel_binarizer = pickle.load(file)\n",
+    "multilabel_binarizer = joblib.load(\"binarizer.pkl\")\n",
     "\n",
     "# Load the TfidfVectorizer\n",
-    "with open(\"vectorizer.pkl\", \"rb\") as file:\n",
-    "    vectorizer = pickle.load(file)\n",
+    "vectorizer = joblib.load(\"vectorizer.pkl\")\n",
     "\n",
     "# Create Flask app\n",
     "app = Flask(__name__)\n",
@@ -105,8 +104,81 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "id": "b46a55ed",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.10.1\n"
+     ]
+    }
+   ],
+   "source": [
+    "import scipy\n",
+    "print(scipy.__version__)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "a7507efa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.8.3\n"
+     ]
+    }
+   ],
+   "source": [
+    "import gensim\n",
+    "print(gensim.__version__)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "37e430da",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name: texthero\n",
+      "Version: 1.1.0\n",
+      "Summary: Text preprocessing, representation and visualization from zero to hero.\n",
+      "Home-page: https://github.com/jbesomi/texthero\n",
+      "Author: Jonathan Besomi\n",
+      "Author-email: \n",
+      "License: MIT\n",
+      "Location: c:\\users\\hp\\anaconda3\\lib\\site-packages\n",
+      "Requires: gensim, matplotlib, nltk, numpy, pandas, plotly, scikit-learn, spacy, tqdm, unidecode, wordcloud\n",
+      "Required-by: \n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: Ignoring invalid distribution -ensorflow-intel (c:\\users\\hp\\anaconda3\\lib\\site-packages)\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip show texthero\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "49b0317f",
+   "id": "a7247b95",
    "metadata": {},
    "outputs": [],
    "source": []
