--- a/app.ipynb
+++ b/app.ipynb
@@ -105,7 +105,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "b46a55ed",
+   "id": "2bebb2ef",
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +124,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "a7507efa",
+   "id": "04d1f94a",
    "metadata": {},
    "outputs": [
     {
@@ -142,43 +142,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "37e430da",
+   "execution_count": 12,
+   "id": "be80c9f9",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Name: texthero\n",
-      "Version: 1.1.0\n",
-      "Summary: Text preprocessing, representation and visualization from zero to hero.\n",
-      "Home-page: https://github.com/jbesomi/texthero\n",
-      "Author: Jonathan Besomi\n",
-      "Author-email: \n",
-      "License: MIT\n",
-      "Location: c:\\users\\hp\\anaconda3\\lib\\site-packages\n",
-      "Requires: gensim, matplotlib, nltk, numpy, pandas, plotly, scikit-learn, spacy, tqdm, unidecode, wordcloud\n",
-      "Required-by: \n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: Ignoring invalid distribution -ensorflow-intel (c:\\users\\hp\\anaconda3\\lib\\site-packages)\n"
+      "0.37.0\n"
      ]
     }
    ],
    "source": [
-    "pip show texthero\n"
+    "import wheel\n",
+    "print(wheel.__version__)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a7247b95",
+   "id": "5867c480",
    "metadata": {},
    "outputs": [],
    "source": []
